# ContextFS

./: .gitignore  CMakeLists.txt  README.md  install.ps1  install.sh  start.sh
.github/workflows/: ci.yml  release.yml
benchmarks/fuse-io/: fuse_io_bench.cpp  null_fuse.cpp  report.py  run.sh
benchmarks/fuse-io/results/: .gitignore
benchmarks/fuse-io/tests/: test_report.py
benchmarks/mem-gc/: driver.py  report.py  run.sh  s1_fanout.py  s2_churn.py  s3_gc.py
benchmarks/speculative-chess/: .gitignore  config.yml  main.py  pyproject.toml  run.sh
benchmarks/speculative-chess/src/: agentvfs.py  candidate_worker.py  cgroup.py  game.py  llm.py  metrics.py  runner_regular.py  runner_spec.py  verifier.py
benchmarks/speculative-chess/tests/: conftest.py  fakes.py  scripted_worker.py  test_agentvfs_integration.py  test_agentvfs_unit.py  test_candidate_worker.py  test_cgroup_unit.py  test_game.py  test_llm.py  test_main.py  test_runner_regular.py  test_runner_spec.py  test_verifier.py
benchmarks/speculative-ml-research/: .gitignore  README.md  config.yml  main.py  pyproject.toml  run.sh
benchmarks/speculative-ml-research/src/: agentvfs.py  cgroup.py  environment.py  llm_client.py  metrics.py  overlay.py  runner_regular.py  runner_spec.py  runtime_boundary.py  verifier.py  warm.py  warm_trainer.py
benchmarks/speculative-ml-research/tests/: conftest.py  coop_toy.py  stub_train.py  test_agentvfs.py  test_agentvfs_state.py  test_cgroup_routing.py  test_environment.py  test_llm_client.py  test_metrics.py  test_runner_regular.py  test_runner_spec.py  test_runtime_coop.py  test_state_chain.py  test_verifier.py  test_warm_trainer.py
docs/: pi-agentvfs-vs-git-rewind.md  roadmap.md
docs/superpowers/plans/: 2026-05-23-blake3-hwaccel.md  2026-05-23-readme-and-install-ux.md
docs/superpowers/specs/: 2026-05-23-blake3-hwaccel-design.md  2026-05-23-readme-and-install-ux-design.md  2026-06-05-pi-agentvfs-autostart-design.md  2026-06-15-agent-state-journal-design.md  2026-07-02-agentvfs-live-runtime-snapshots-design.md  2026-07-07-speculative-ml-research-design.md  2026-07-08-spec-ml-state-layers-design.md
extensions/pi/: README.md  package.json
extensions/pi/src/: commands.ts  core.ts  index.ts  state.ts  ui.ts
src/cas/: agent_state.cpp  agent_state.h  agent_state_service.cpp  agent_state_service.h  bootstrap.cpp  bootstrap.h  branch_context.h  branch_router.cpp  branch_router.h  cgroup_watch.cpp  cgroup_watch.h  checkpoint.cpp  checkpoint.h  control_channel.h  control_protocol.cpp  control_protocol.h  control_socket.cpp  control_socket.h  daemon.cpp  daemon.h  fast_control.h  fast_control_client.cpp  fast_control_client.h  gc.cpp  gc.h  hash.h  main.cpp  object_store.cpp  object_store.h  refs.cpp  refs.h  routing_fence.cpp  routing_fence.h  runtime_process_posix.cpp  runtime_process_posix.h  runtime_process_unsupported.cpp  runtime_process_unsupported.h  runtime_state.cpp  runtime_state.h  runtime_supervisor.cpp  (+8 more)
src/cas/bpf/: routing_fence.bpf.c
src/cas/platform/linux/: fuse_adapter.cpp  fuse_read_buffer.cpp  fuse_read_buffer.h
src/cas/platform/macos/: fuse_t_adapter.cpp  main_macos.cpp
src/cas/platform/windows/: main_windows.cpp  named_pipe_channel.cpp
src/ctl/: main.cpp
src/runtime/: agentvfs_run.cpp  runtime_client.cpp  runtime_client.h  runtime_io.h
tests/: CMakeLists.txt
tests/cas/: test_agentvfs_ctl.sh  test_blake3_simd.cpp  test_object_store.cpp
tests/fixtures/: runtime_counter_fixture.cpp  test_filter.wat  test_policy.lua
tests/support/: ebpf_loader_stub.cpp
tests/system/: test_agentvfs_ctl.sh  test_cas_backend_compare.sh  test_cas_blob_metadata.sh  test_cas_bootstrap.sh  test_cas_bpftime.sh  test_cas_branch_merge.sh  test_cas_branching.sh  test_cas_fh_lifecycle.cpp  test_cas_fh_lifecycle.sh  test_cas_gc_live.sh  test_cas_ldpreload.sh  test_cas_lua.sh  test_cas_multi_branch.sh  test_cas_multi_branch_merge.sh  test_cas_runtime_snapshot.sh  test_cas_smoke.sh  test_cas_telemetry_ramp.sh  test_cas_wasm.sh  test_cas_wasm_actually_skipped.sh  test_cgroup_watch_kernfs.cpp  test_cgroup_watch_kernfs.sh  test_ebpf_parallel_build.sh  test_macos_e2e.sh  test_macos_workspace_cli.sh  test_quickstart_demo_smoke.sh  test_routing_fence.sh  test_routing_fence_exit.cpp  test_routing_fence_exit.sh  test_start_sh.sh  test_workspace_cli.sh  test_workspace_multi_branch.sh
tests/system/linux/: test_cas_10cp_ebpf.sh  test_cas_10cp_rollback.sh  test_cas_fanotify.sh  test_cas_lua_actually_skipped.sh  test_cas_multi_backend.sh  test_cas_multi_branch_ebpf.sh  test_cas_ptrace.sh  test_cas_telemetry.sh  test_cas_telemetry_ramp.sh  test_start_sh.sh  test_workspace_multi_branch.sh
tests/system/macos/: test_direct_mount_lifecycle.sh  test_workspace_cli.sh
tests/system/windows/: test_winfsp_e2e.ps1  test_winfsp_mount.ps1
tests/unit/: test_agent_state.cpp  test_agent_state_control.cpp  test_agent_state_service.cpp  test_bpftime_backend.cpp  test_branch_context.cpp  test_branch_merge.cpp  test_branch_merge_commit.cpp  test_branch_merge_daemon.cpp  test_branch_persistence.cpp  test_branch_router.cpp  test_cgroup_watch.cpp  test_ebpf_backend.cpp  test_fanotify_backend.cpp  test_fuse_read_buffer.cpp  test_fuse_t_preflight.cpp  test_gc.cpp  test_gc_control.cpp  test_ldpreload_backend.cpp  test_ldpreload_preload.cpp  test_lua_backend.cpp  test_named_pipe_channel.cpp  test_object_store.cpp  test_ptrace_backend.cpp  test_runtime_control.cpp  test_runtime_process_posix.cpp  test_runtime_process_unsupported.cpp  test_runtime_state.cpp  test_runtime_supervisor.cpp  test_stats_memory.cpp  test_telemetry_event.cpp  test_telemetry_registry.cpp  test_tree_rebuild.cpp  test_wasm_backend.cpp  test_win_helpers.cpp  test_working_tree.cpp  test_working_tree_delta.cpp  test_workspace_cli.cpp  test_write_buffer.cpp
